# learnc

./: 1.c  2.c  6.cc  CMakeLists.txt  README.md  Thing.cc  args.cc  array.c  array.cc  auto.cc  auto2.cc  bitset.cc  blank.c  bt_demo.c  byref.cc  calc.c  class_encapsulation.cc  compare.cc  complex_ptr.c  const.cc  const_ptr.cc  constexpr_demo.cc  constructor.cc  count.c  cut.cc  dec_to_bin.c  decltype.cc  detach.cc  dup.c  dynamic.cc  errorno.cc  execve.c  explicit_conversion.cc  file.txt  file2.txt  file_io.c  foo.c  foo.txt  forward.cc  friend.cc  (+79 more)
foo/: x.c
foo/bar/: y.c
