cmake_minimum_required(VERSION 3.9)
project(cmake_clion)

set(CMAKE_CXX_STANDARD 11)

add_executable(1 1.c)
add_executable(2 2.c foo.h foo.c)
add_executable(hahaha loop.c)
add_executable(heihei loop2.c)

add_library(libfoo foo.c)
add_executable(delta 2.c)
target_link_libraries(delta libfoo)

add_library(lib_inc_x inc_x.c)
add_library(lib_sum_inc_x_and_y sum_inc_x_and_y.c)
add_executable(calc calc.c)
target_link_libraries(calc lib_inc_x lib_sum_inc_x_and_y)

add_executable(ptr ptr.c)
add_executable(ptr2 ptr2.c)
add_executable(minus minus.cpp)
add_executable(3 loop.c)
add_executable(4 loop2.c)
add_executable(count count.c)
add_executable(replace replace.c)
add_executable(nospace nospace.c)
add_executable(state state.c)
add_executable(string string.cpp)
add_executable(throw throw.cpp)
add_executable(new_delete new_delete.cpp)
add_executable(shared_ptr shared_ptr.cpp)
add_executable(point point.c)
add_executable(funcptr funcptr.c)
add_executable(array array.c)
add_executable(ptrdemo ptrdemo.cpp)
add_executable(tempref tempref.cc)
add_executable(const_ptr const_ptr.cc)
add_executable(shared_ptr_demo shared_ptr_demo.cc)
add_executable(padding padding.cc)
add_executable(l_r_vals l_r_vals.cc)
add_executable(ref_ptr ref_ptr.cc)
add_executable(vector_demo vector_demo.cc)
add_executable(virtual_func virtual_func.cc)
add_executable(array_cc array.cc)
add_executable(scores scores.cc)
add_executable(class_encapsulation class_encapsulation.cc)
add_executable(return_ref return_ref.cc)
add_executable(constexpr_demo constexpr_demo.cc)
add_executable(make_shared make_shared.cc)
add_executable(ifstream_demo ifstream_demo.cc)
add_executable(inst_sort inst_sort.cc)
add_executable(my_shared_ptr my_shared_ptr.cc)
add_executable(reinterpret_cast_demo reinterpret_cast_demo.cc)
add_executable(streams streams.cc)
add_executable(static_cast_demo static_cast_demo.cc)
add_executable(errorno errorno.cc)
add_executable(6 6.cc)
add_executable(play_with_assert play_with_assert.c)
add_executable(macro_expand macro_expand.c)
add_executable(complex_ptr complex_ptr.c)
add_executable(showbase_demo showbase_demo.cc)
add_executable(dup dup.c)
add_executable(bitset bitset.cc)
add_executable(sizeof_demo sizeof_demo.c)
add_executable(file_io file_io.c)
add_executable(unsigned_bug_demo unsigned_bug_demo.c)
add_executable(bt_demo bt_demo.c)