cmake_minimum_required(VERSION 3.9)
project(cmake_clion)

set(CMAKE_CXX_STANDARD 17)

add_executable(1 1.c)
add_executable(2 2.c foo.h foo.c)
add_executable(hahaha loop.c)
add_executable(loop2 loop2.c)
add_executable(execve execve.c)
add_executable(lambda lambda.cc)

add_library(foolib foolib.c)
add_executable(usefoo usefoolib.c)
target_link_libraries(usefoo foolib)

add_library(libfoo foo.c)
add_executable(delta 2.c)
target_link_libraries(delta libfoo)

add_library(lib_inc_x inc_x.c)
add_library(lib_sum_inc_x_and_y sum_inc_x_and_y.c)
add_executable(calc calc.c)
target_link_libraries(calc lib_inc_x lib_sum_inc_x_and_y)

add_executable(ptr ptr.c)
add_executable(ptr2 ptr2.c)
add_executable(minus minus.cpp)
add_executable(3 loop.c)
add_executable(4 loop2.c)
add_executable(count count.c)
add_executable(replace replace.c)
add_executable(nospace nospace.c)
add_executable(state state.c)
add_executable(string string.cpp)
add_executable(throw throw.cpp)
add_executable(new_delete new_delete.cpp)
add_executable(shared_ptr shared_ptr.cpp)
add_executable(point point.c)
add_executable(funcptr funcptr.c)
add_executable(array array.c)
add_executable(ptrdemo ptrdemo.cpp)
add_executable(tempref tempref.cc)
add_executable(const_ptr const_ptr.cc)
add_executable(shared_ptr_demo shared_ptr_demo.cc)
add_executable(padding padding.cc)
add_executable(l_r_vals l_r_vals.cc)
add_executable(ref_ptr ref_ptr.cc)
add_executable(vector_demo vector_demo.cc)
add_executable(virtual_func virtual_func.cc)
add_executable(array_cc array.cc)
add_executable(scores scores.cc)
add_executable(class_encapsulation class_encapsulation.cc)
add_executable(return_ref return_ref.cc)
add_executable(constexpr_demo constexpr_demo.cc)
add_executable(make_shared make_shared.cc)
add_executable(ifstream_demo ifstream_demo.cc)
add_executable(inst_sort inst_sort.cc)
add_executable(my_shared_ptr my_shared_ptr.cc)
add_executable(reinterpret_cast_demo reinterpret_cast_demo.cc)
add_executable(streams streams.cc)
add_executable(static_cast_demo static_cast_demo.cc)
add_executable(errorno errorno.cc)
add_executable(6 6.cc)
add_executable(play_with_assert play_with_assert.c)
add_executable(macro_expand macro_expand.c)
add_executable(complex_ptr complex_ptr.c)
add_executable(showbase_demo showbase_demo.cc)
add_executable(dup dup.c)
add_executable(bitset bitset.cc)
add_executable(sizeof_demo sizeof_demo.c)
add_executable(file_io file_io.c)
add_executable(unsigned_bug_demo unsigned_bug_demo.c)
add_executable(goto goto.cc)
add_executable(cut cut.cc)
add_executable(bt_demo bt_demo.c)
add_executable(switch_demo switch_demo.cc)
add_executable(trait_demo trait_demo.cc)
add_executable(template_demo template_demo.cc)
add_executable(temp2 temp2.cc)
add_executable(temp3 temp3.cc)
add_executable(lref_and_rref lref_and_rref.cc)
add_executable(sizeofplus sizeofplus.cc)
add_executable(scoped scoped.c)
add_executable(twoDimArrayDemoPtrVer twoDimArrayDemoPtrVer.c)
add_executable(temp_ptr temp_ptr.cc)
add_executable(the_stack the_stack.c)
add_executable(kv kv.c)
add_executable(heapsort heapsort.c)
add_executable(ptr_arr ptr_arr.c)

file(GLOB_RECURSE foobar_src "foo/*.c")
add_executable(foobar ${foobar_src})
add_executable(order order.c)
add_executable(getifaddrs_example getifaddrs_example.c)
add_executable(parse parse.c)
add_executable(dec_to_bin dec_to_bin.c)
add_executable(safe_open safe_open.c)
add_executable(iterator iterator.cc)

add_executable(auto auto.cc)
add_executable(template template.cc)
add_executable(friend friend.cc)
add_executable(map map.cc)


